# Recyclops

./: Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  app.py  config.py  learned_features.py  models.py
app/templates/: 500.html  index.html  uni.html
cif3r/data/: create_metadata.py  recycling_guidelines.py  scraper.py
cif3r/features/: preprocessing.py  utils.py
cif3r/models/: clustering.py  custom_metrics.py  dataset.py  knn.py  learned_features.py  model_eval.py  parser_util.py  predict_model.py  proto_loss.py  protonet.py  sampler.py  siamese_training.py  train_model.py  train_siamese.py
cif3r/visualization/: events.out.tfevents.1566966536.dal  learned_features.py  visualize.py
data/final/: CDs_centroids.pt  aerosol spray cans_centroids.pt  aluminum beverage can_centroids.pt  aluminum foil_centroids.pt  aluminum tray_centroids.pt  cardboard food container_centroids.pt  cardboard_centroids.pt  catalogs_centroids.pt  cereal boxes_centroids.pt  clean milk jug_centroids.pt  clean plastic bottle_centroids.pt  clean plastic cup_centroids.pt  clean plastic detergent container_centroids.pt  dirty plasticware_centroids.pt  envelopes_centroids.pt  glass bottles_centroids.pt  glass jars_centroids.pt  hardback books_centroids.pt  journals_centroids.pt  juice carton_centroids.pt  ledger paper_centroids.pt  magazines_centroids.pt  milk carton_centroids.pt  muffin liner_centroids.pt  newspapers_centroids.pt  packing peanuts_centroids.pt  paper plates_centroids.pt  paper towel_centroids.pt  pet food can_centroids.pt  phone books_centroids.pt  pie tin_centroids.pt  pieces of paper_centroids.pt  plastic bag_centroids.pt  plastic bottle with liquid_centroids.pt  (+9 more)
docs/: Makefile  conf.py  index.rst  make.bat
models/: 2019-08-28 00:34:33.h5  2019-08-28 08:03:49.h5  UTK.h5  UTK_best_model.pth  UTK_binary.h5  UTK_feature_xtract.h5  UTK_full_cls_prediction.h5  UTK_last_model.pth  UTK_siamese.h5  UTK_siamese_weights.h5  penn_state.h5  penn_state_binary.h5  siamese_training.py
notebooks/: 190826_resnet_fine-tune.ipynb
references/: 200205_feedback  research_summary.md  top_skills.md
reports/: events.out.tfevents.1566968534.dal  events.out.tfevents.1566970475.dal  events.out.tfevents.1566997431.dal
src/: __init__.py
(+55 files in other folders)
