[tool.poetry]
name = "cif3r"
version = "0.3.0"
description = "A classifier to determine whether an object is recycleable"
authors = ["dendrondal <dendrondal@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
Pillow = "^7.0.0"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
sklearn = "^0.0"
scikit-learn = "^0.22.1"
setuptools = "^41.0.0"
torch = "^1.6.0"
streamlit = "^0.64.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
